# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  As much as I hate this, we're going to force baselayout to install first.
  This will keep us from having any issues with packages that don't respect
  multilib libdirs.

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf:
  Reorder options in catalyst.conf so they're alphabetical.

  02 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Add 'pager on' to grub.conf for bug 208531

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/README.txt, livecd/files/x86-F6.msg:
  Removing the unused kernel command line options from Volume/Device Management.

  10 Jan 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is now 2.0.5 for release.

  25 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  files/catalyst.conf, modules/catalyst_support.py,
  modules/generic_stage_target.py,
  targets/embedded/embedded-preclean-chroot.sh,
  targets/grp/grp-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,
  targets/support/chroot-functions.sh,
  targets/tinderbox/tinderbox-preclean-chroot.sh:
  Applying a patch from Tais M. Hansen <tais.hansen@osd.dk> to add initial
  sys-devel/icecream cluster compiler support for bug #200095. This is
  catalyst 2.0.5_pre6 for testing.

  25 Nov 2007; Andrew Gaffney <agaffney@gentoo.org> catalyst,
  files/catalyst.conf, modules/generic_stage_target.py:
  Add the option for using metadata_overlay with portage to speed up cache.

  25 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>
  modules/stage1_target.py, modules/stage2_target.py,
  modules/stage3_target.py:
  Add /etc/portage to cleanables for stages 1 through 3.

  17 Nov 2007; Andrew Gaffney <agaffney@gentoo.org>